lexer_parser/src/test/exempleFile/miniJaja/success/oneDeclarationWithoutInst.mjj
class oneDeclarationWithoutInst{
    int a;

    main{
        
    }
}