lexer_parser/src/test/exempleFile/miniJaja/fail/classInClass.mjj
class classInClass {

    class childClass{

    }

    main{

    }
}